--- a/post/templates/post/upload_form.html
+++ b/post/templates/post/upload_form.html
@@ -1,10 +1,10 @@
 {% extends 'post/blog.html' %}
 {% block content %}
 <center>
-    <h1 class="display-3" >Upload Blog</h1>
+    <h1 class="display-8" >Upload Blog</h1>
 <form method='POST' enctype="multipart/form-data">
     {% csrf_token %}
-    <table class='w-50 table table-light' style="border-radius:10px;background-color:#FFFF99;">
+    <table class='w-50 table table-light' style="border-radius:10px;background-color:gray;">
         {% for field in upload_form %}
         <tr>
             <th>{{field.label}}</th>
