remove colors from navbar

--- a/post/templates/post/blog.html
+++ b/post/templates/post/blog.html
@@ -15,13 +15,13 @@
         <nav class="navbar navbar-light" style="background-color:gray;">
             <!-- <a href="" class="navbar-brand" style="background-color:#FFCC33;color:#000000;border-width:10px;border-color:#FFCC33;border-style:solid;border-spacing:30px;border-radius: 5px;">Blogs</a> -->
             <a class="navbar-link btn-lg" href="{% url 'index' %}"
-                style="background-color:#FFCC33;color:#000000;">Blogs</a>
+                style="color:#000000;">Blogs</a>
             <a href="{% url 'upload-post' %}" class="navbar-link btn-lg"
-                style="background-color:#FFCC33;color:#000000;">Add Blog</a>
+                style="color:#000000;">Add Post</a>
             <a href="{% url 'register' %}" class="navbar-link btn-lg"
-                style="background-color:#FFCC33;color:#000000;">Register</a>
+                style="color:#000000;">Register</a>
             <a href="{% url 'login' %}" class="navbar-link btn-lg"
-                style="background-color:#FFCC33;color:#000000;">Login</a>
+                style="color:#000000;">Login</a>
         </nav>
         <br>
         <div class="container-fluid">
