--- a/post/templates/post/upload_form.html
+++ b/post/templates/post/upload_form.html
@@ -1,4 +1,4 @@
-{% extends 'post/blog.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <center>
     <h1 class="display-8" >Upload Blog</h1>
