--- a/post/templates/navbar.html
+++ b/post/templates/navbar.html
@@ -10,9 +10,9 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
     </ul>
-    <ul class="my-2 my-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+    <ul class="navbar-nav my-2 my-lg-0">
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-success my-2 my-sm-0" href="{% url 'upload-post' %}">Home <span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
