--- a/post/templates/navbar.html
+++ b/post/templates/navbar.html
@@ -12,7 +12,7 @@
     </ul>
     <ul class="navbar-nav my-2 my-lg-0">
       <li class="nav-item">
-        <a class="nav-link btn btn-outline-success my-2 my-sm-0" href="{% url 'upload-post' %}">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link btn btn-outline-success my-2 my-sm-0" href="{% url 'upload-post' %}">Add Post</a>
       </li>
     </ul>
   </div>
