--- a/post/templates/post/post.html
+++ b/post/templates/post/post.html
@@ -12,7 +12,7 @@
 
                 <center>
                     <a href="#" class="btn btn-primary"> More &rarr;</a>
-                    <a href="update/{{post.id}}" class="btn btn-warning" id='{{post.id}}'>edit</a>
+                    <a href=" update/{{post.id}}  "class="btn btn-warning"  id='{{post_id}}'>edit</a>
                     <a href="delete/{{post.id}}" class="btn btn-danger" id='{{post.id}}'>delete</a>
                 </center>
             </div>
