--- a/post/templates/navbar.html
+++ b/post/templates/navbar.html
@@ -9,6 +9,12 @@
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'register' %}">Sign up <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'login' %}">login <span class="sr-only">(current)</span></a>
+      </li>
     </ul>
     <ul class="navbar-nav my-2 my-lg-0">
       <li class="nav-item">
