--- a/post/templates/post/upload_form.html
+++ b/post/templates/post/upload_form.html
@@ -1,18 +1,41 @@
+
+
+    
 {% extends 'base.html' %}
+
 {% block content %}
-<center>
-    <h1 class="display-8" >Upload Blog</h1>
-<form method='POST' enctype="multipart/form-data">
-    {% csrf_token %}
-    <table class='w-50 table table-light' style="border-radius:10px;background-color:gray;">
-        {% for field in upload_form %}
-        <tr>
-            <th>{{field.label}}</th>
-            <td>{{ field }}</td>
-        </tr>
-        {% endfor %}
-    </table>
-    <button type="submit" class="btn btn-lg btn-warning">Submit</button>
+
+{% load widget_tweaks %}
+<div class="container">
+    <div class="row align-items-center vh-100">
+        <div class="col-6 mx-auto">
+<div class="card d-flex flex-column align-items-center" style="width: 40rem;">
+   
+<h2>New post</h2>
+<div class="form-group">
+<form method="post" novalidate>
+  {% csrf_token %}
+
+  {% for hidden_field in form.hidden_fields %}
+  {{ hidden_field }}
+  {% endfor %}
+
+  {% for field in form.visible_fields %}
+  <div class="form-group">
+    {{ field.label_tag }}
+    {% render_field field class="form-control" %}
+    {% if field.help_text %}
+    <small class="form-text text-muted">{{ field.help_text }}</small>
+    {% endif %}
+  </div>
+  {% endfor %}
+
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-</center>
 {% endblock %}
+</div>
+
+</div>
+</div>
+</div>
+</div>
