--- a/post/templates/registration/login.html
+++ b/post/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends 'post/blog.html' %} {% block content %}
+{% extends 'base.html' %} {% block content %}
 <section>
   <div class="container">
     <div class="row">
