--- a/post/templates/registration/register.html
+++ b/post/templates/registration/register.html
@@ -1,4 +1,4 @@
-{% extends 'blog.html' %} {% block content %}
+{% extends 'base.html' %} {% block content %}
 <section>
     <div class="container">
         <div class="row">
