--- a/post/templates/post/post.html
+++ b/post/templates/post/post.html
@@ -1,19 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="card-columns">
+   
     {% for post in post %}
+
     <div class="card" style="height: 18rem;">
         <div class="card-body">
-            <h5 class="card-title">{{ post.title }}</h5>
+            <h5 class="card-title">{{ post.title }} </h5>
             <p class="card-text">{{post.blog|slice:":200" }}</p>
             <div class="card-footer bg-transparent border-dark">
 
                 <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_on}} </p>
 
                 <center>
+                    {% if user.id == post.author.id%}
                     <a href="#" class="btn btn-primary"> More &rarr;</a>
-                    <a href=" update/{{post.id}}  "class="btn btn-warning"  id='{{post_id}}'>edit</a>
+                    <a href=" update/{{post.id}}  "class="btn btn-warning"  id='{{post.id}}'>edit</a>
                     <a href="delete/{{post.id}}" class="btn btn-danger" id='{{post.id}}'>delete</a>
+                
+                {% endif%}
                 </center>
             </div>
         </div>
