--- a/post/templates/post/upload_form.html
+++ b/post/templates/post/upload_form.html
@@ -15,7 +15,8 @@
 <div class="form-group">
 <form method="post" novalidate>
   {% csrf_token %}
-
+current user ={{user.id}}
+autho={{post.author.id}}
   {% for hidden_field in form.hidden_fields %}
   {{ hidden_field }}
   {% endfor %}
