--- a/post/templates/registration/login.html
+++ b/post/templates/registration/login.html
@@ -1,23 +1,16 @@
 {% extends 'base.html' %} {% block content %}
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 col-centered">
-       
-      </div>
-        <div class="col-md-12 col-centered">
-        
-        </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-md-6 offset-md-3 mt-3">
+
+<div class="container">
+    <div class="row align-items-center mt-5">
+      <div class="col-6 mx-auto  ">
+        <div class="card  d-flex flex-column align-items-center " style="width: 25rem;">
         <form method="post" action="{% url 'login' %}">
           {% csrf_token %}
           <div class="form-group">
             {{ form.username.label_tag }}
             <input type="text" name="username" class="form-control" maxlength="150" id="id_username" required />
           </div>
+          
           <div class="form-group">
             {{ form.password.label_tag }}
             <input type="password" name="password" class="form-control" id="id_password" required />
@@ -27,10 +20,15 @@
             {{ error|escape }}
           </p>
           {% endfor %} {% endif %}
-          <button type="submit" class="btn btn-primary">Login</button>
+          <center>
+          <button type="submit" class="btn btn-primary  ">Login</button>
+          <p class="text-center mt-2">Don't have an account?<a href="/register/"> Sign Up</a></p>
+        </center>
         </form>
       </div>
     </div>
   </div>
-</section>
+  </div>
+  </div>
+
 {% endblock %}
