--- a/post/templates/registration/register.html
+++ b/post/templates/registration/register.html
@@ -1,13 +1,11 @@
 {% extends 'base.html' %} {% block content %}
 <section>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 col-centered">
-                
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 offset-md-3 mt-3">
+<div class="container">
+    <div class="row align-items-center mt-5">
+        <div class="col-6 mx-auto col-md-6 offset-md-3 mt-3">
+            <div class="card d-flex flex-column align-items-center" style="width: 25rem;">
+            
+
                 <form method="post" action="{% url 'register' %}">
                     {% csrf_token %} {% for field in form %}
                     <div class="form-group">
@@ -23,9 +21,12 @@
                     </p>
                     {% endfor %} {% endif %} {% endfor %}
                     <button type="submit" class="btn btn-primary mt-2">Register</button>
+                    
                 </form>
-            </div>
+           
         </div>
     </div>
+    </div>
+</div>
 </section>
 {% endblock %}
