made changes to disign

--- a/post/templates/navbar.html
+++ b/post/templates/navbar.html
@@ -1,3 +1,5 @@
+
+<div class="container-fluid">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="{% url 'index' %}">Blog Application</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,3 +30,4 @@
     </ul>
   </div>
 </nav>
+</div>
