--- a/post/templates/post/upload_form.html
+++ b/post/templates/post/upload_form.html
@@ -5,12 +5,13 @@
 
 {% block content %}
 
-{% load widget_tweaks %}
+
 <div class="container">
+
     <div class="row align-items-center vh-100">
         <div class="col-6 mx-auto">
-<div class="card d-flex flex-column align-items-center" style="width: 40rem;">
-   
+<div class="card d-flex flex-column align-items-center p-2" >
+  {% load widget_tweaks %}
 <h2>New post</h2>
 <div class="form-group">
 <form method="post" novalidate>
