--- a/post/templates/registration/login.html
+++ b/post/templates/registration/login.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row align-items-center mt-5">
       <div class="col-6 mx-auto  ">
-        <div class="card  d-flex flex-column align-items-center " style="width: 25rem;">
+        <div class="card  d-flex flex-column align-items-center  pt-2" style="width: 25rem;">
         <form method="post" action="{% url 'login' %}">
           {% csrf_token %}
           <div class="form-group">
