--- a/post/templates/navbar.html
+++ b/post/templates/navbar.html
@@ -12,10 +12,13 @@
         <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'register' %}">Sign up <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'register' %}">sign up <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'login' %}">login <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'logout' %}">logout <span class="sr-only">(current)</span></a>
       </li>
     </ul>
     <ul class="navbar-nav my-2 my-lg-0">
