made changes to disign

--- a/post/templates/post/upload_form.html
+++ b/post/templates/post/upload_form.html
@@ -10,7 +10,7 @@
 
     <div class="row align-items-center vh-100">
         <div class="col-6 mx-auto">
-<div class="card d-flex flex-column align-items-center p-2" >
+<div class="card d-flex flex-column align-items-center p-2 bg-light" >
   {% load widget_tweaks %}
 <h2>New post</h2>
 <div class="form-group">
