--- a/post/templates/registration/register.html
+++ b/post/templates/registration/register.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row align-items-center mt-5">
         <div class="col-6 mx-auto col-md-6 offset-md-3 mt-3">
-            <div class="card d-flex flex-column align-items-center pt-2" style="width: 25rem; height: 23rem;">
+            <div class="card d-flex flex-column align-items-center pt-2 bg-light" style="width: 25rem; height: 23rem;">
             
 
                 <form method="post" action="{% url 'register' %}">
