made changes to disign

--- a/post/templates/post/upload_form.html
+++ b/post/templates/post/upload_form.html
@@ -8,7 +8,7 @@
 
 <div class="container">
 
-    <div class="row align-items-center vh-100">
+    <div class="row align-items-center ">
         <div class="col-6 mx-auto">
 <div class="card d-flex flex-column align-items-center p-2 bg-light" >
   {% load widget_tweaks %}
@@ -33,10 +33,11 @@
 
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-{% endblock %}
+
 </div>
 
 </div>
 </div>
 </div>
 </div>
+{% endblock content%}
