--- a/post/templates/navbar.html
+++ b/post/templates/navbar.html
@@ -1,7 +1,8 @@
+{% block content %}
 
-<div class="container-fluid">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'index' %}">Blog Application</a>
+<div class="container-fluid mb-3">
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: #e3f2fd;">
+  <a class="navbar-brand" href="{% url 'home' %}">Blog Application</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -9,24 +10,31 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
       </li>
+        <li class="nav-item">
+        
+          <a class="nav-link " href="{% url 'upload-post' %}">Add Post</a>
+        </li>
+        <li class="nav-item">
+        
+          <a class="nav-link " href="{% url 'index' %}">my post</a>
+        </li>
+    </ul>
+    <ul class="navbar-nav my-2 my-lg-0">
+      
+      {% if user.is_authenticated %}
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'logout' %}">logout <span class="sr-only">(current)</span></a>
+      </li>
+      {% else %}
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'register' %}">sign up <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'login' %}">login <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'logout' %}">logout <span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
-    <ul class="navbar-nav my-2 my-lg-0">
-      <li class="nav-item">
-        
-        <a class="nav-link btn btn-outline-success my-2 my-sm-0" href="{% url 'upload-post' %}">Add Post</a>
-      </li>
-      
+      {%endif%}
     </ul>
   
     
@@ -34,3 +42,5 @@
   </div>
 </nav>
 </div>
+{% endblock content %}
+{% include 'footer.html' %}
