--- a/post/templates/registration/register.html
+++ b/post/templates/registration/register.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %} {% block content %}
 <section>
 <div class="container">
-    <div class="row align-items-center mt-5">
-        <div class="col-6 mx-auto col-md-6 offset-md-3 mt-3">
-            <div class="card d-flex flex-column align-items-center pt-2 bg-light" style="width: 25rem; height: 23rem;">
+    <div class="row align-items-center mt-5 ">
+        <div class="col-6 mx-auto col-md-6 offset-md-3 mt-5">
+            <div class="card d-flex flex-column align-items-center pt-5 bg-light" style="width: 25rem; height: 25rem;">
             
 
                 <form method="post" action="{% url 'register' %}">
@@ -22,6 +22,7 @@
                     {% endfor %} {% endif %} {% endfor %}
                     <center>
                     <button type="submit" class="btn btn-primary mt-2">Register</button>
+                    <p class="text-center mt-2">Do you have an account?<a href="/login/"> login</a></p>
                     </center>
                 </form>
            
@@ -30,4 +31,5 @@
     </div>
 </div>
 </section>
-{% endblock %}
+{% endblock content%}
+{% include 'footer.html' %}
