--- a/post/templates/navbar.html
+++ b/post/templates/navbar.html
@@ -1,7 +1,7 @@
 {% block content %}
 
 
-<nav class="navbar navbar-expand-lg navbar-light mb-3" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar-light mb-3" style="background-color: rgba(0, 0, 0, 0.2);">
   <a class="navbar-brand" href="{% url 'home' %}">Blog Application</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -16,10 +16,12 @@
         
           <a class="nav-link active" href="{% url 'upload-post' %}">Add Post</a>
         </li>
+        {% if user.is_authenticated %}
         <li class="nav-item  ">
         
           <a class="nav-link " href="{% url 'index' %}">my post</a>
         </li>
+        {%endif%}
     </ul>
     <ul class="navbar-nav my-2 my-lg-0">
       
